Fix grid-gap issue

--- a/css/index.css
+++ b/css/index.css
@@ -336,7 +336,7 @@ main.promoted-articles__container {
 .promoted-articles {
   border: 0;
   display: grid;
-  gap: 8px;
+  grid-gap: 8px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 240px);
   grid-template-areas: "article-6 article-5 article-3 article-3""article-6 article-5 article-3 article-3""article-1 article-1 article-2 article-2""article-1 article-1 article-4 article-4";
